<resources>
    <!-- Название программы -->
    <string name="app_name">EDK6_LAB3</string>

    <!-- Текстовые константы -->
    <string name="Мужчина">Мужчина</string>
    <string name="Женщина">Женщина</string>
    <string name="Кто_Вы">Здравствуйте, можете пройти наше анкетирование?</string>
    <string name="Введите_ФИО">ФИО</string>
    <string name="Ваше_ФИО">Ваше ФИО:</string>
    <string name="Укажите_пол">Укажите пол:</string>
    <string name="Еда">Ваша любимая еда:</string>
    <string name="Что_нравится">Что вам больше нравится?</string>
    <string name="Конечно">КОНЕЧНО</string>
    <string name="Далее">Далее</string>
    <string name="Суп">Суп</string>
    <string name="Второе">Второе</string>
    <string name="Десерт">Десерт</string>
    <string name="Сводные_данные">Сводные данные:</string>
    <string name="Назад">Назад</string>
    <string name="Выход">Выход</string>
    <string name="Вы">Вы:</string>
    <string name="Ваш_пол">Ваш пол:</string>
    <string name="Любимая_еда">Любимая еда:</string>
    <string name="Вам_нравится">Вам нравится:</string>

    <!-- Массив строк -->
    <string-array name="arrays">
        <item>Учится</item>
        <item>Работать</item>
        <item>Играть</item>
        <item>Заниматься спортом</item>
    </string-array>

</resources>
