<?xml version="1.0" encoding="utf-8"?>
<!-- Относительное выравнивание, используется весь экран
     и фоновая картинка "background1" -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2">

    <!-- Выравнивание от верхнего края экрана (android:layout_alignParentTop="true")
         по-центру по-горизонтали (android:gravity="center")
         c наклоном текста в 4 градуса (android:rotation="4"),
         желтым цветом (android:textColor="#F2E70E")
         и 36 относительным размером android:textSize="36sp" -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/Ваше_ФИО"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <!-- Выравнивание ниже компонента "textView" (android:layout_below="@+id/textView")
         по-центру по-горизонтали (android:gravity="center"), размер 20 букв "M" -->
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:ems="20"
        android:gravity="center"
        android:hint="@string/Введите_ФИО"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#00FFFF" />

    <!-- Выравнивание ниже компонента "editText" (android:layout_below="@+id/editText")
         по-центру по-горизонтали (android:gravity="center")
         большим шрифтом (android:textAppearance="?android:attr/textAppearanceLarge")
         c жирностью и наклоном (android:textStyle="bold|italic") -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:gravity="center"
        android:text="@string/Укажите_пол"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"

        android:textStyle="bold|italic" />

    <!-- Выравнивание ниже компонента "textView2" (android:layout_below="@+id/textView2") -->
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:gravity="center"
        android:text="@string/Мужчина"
        android:textColor="@color/white" />

    <!-- Выравнивание ниже компонента "checkBox" (android:layout_below="@+id/checkBox")
         по-центру по-горизонтали (android:gravity="center")
         средним размером (android:textAppearance="?android:attr/textAppearanceMedium") -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:gravity="center"
        android:text="@string/Еда"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <!-- Выравнивание ниже компонента "textView3" (android:layout_below="@+id/textView3") -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Суп"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Второе"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Десерт"
            android:textColor="@color/white" />

    </RadioGroup>

    <!-- Выравнивание ниже компонента "radioGroup" (android:layout_below="@+id/radioGroup")
         по-центру по-горизонтали (android:gravity="center")
         маленьким размером (android:textAppearance="?android:attr/textAppearanceSmall") -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:gravity="center"
        android:text="@string/Что_нравится"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <!-- Выравнивание ниже компонента "textView4" (android:layout_below="@+id/textView4") -->
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:entries="@array/arrays"
        android:minHeight="48dp" />

    <!-- Выравнивание по нижней границы окна (android:layout_alignParentBottom="true") -->
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onNext"
        android:text="@string/Далее" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:onClick="onBack"
        android:text="@string/Назад" />

</RelativeLayout>