<?xml version="1.0" encoding="utf-8"?>
<!-- Относительное выравнивание, используется весь экран
     и фоновая картинка "background1" -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <!-- Выравнивание от верхнего края экрана (android:layout_alignParentTop="true")
         по-центру по-горизонтали (android:gravity="center")
         c наклоном текста в 4 градуса (android:rotation="4"),
         желтым цветом (android:textColor="#F2E70E")
         и 36 относительным размером android:textSize="36sp" -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:rotation="1"
        android:text="@string/Кто_Вы"
        android:textColor="#F2E70E"
        android:textSize="36sp"
        android:translationY="-40sp" />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/next"
        android:onClick="onExit"
        android:text="@string/Выход"/>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="20sp"
        android:onClick="onNext"
        android:text="@string/Конечно" />


</RelativeLayout>